# hbase-thrift2

./: CMakeLists.txt  README.md
include/hbase/: Hbase_constants.cpp  Hbase_constants.h  Hbase_types.cpp  Hbase_types.h  THBaseService.cpp  THBaseService.h
include/thrift/: config.h
src/: container.h  count.h  hbaseclient.cpp  hbaseclient.h  mulitcount.h  thriftclient.h
